syntax = "proto3";
option go_package = "github.com/adylanrff/raft-algorithm/proto/raft";

// RequestVote Method
message RequestVoteRequest {
  int32 term = 1;
  string candidate_id = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool vote_granted = 2;
}

// AppendEntries Method
message AppendEntriesRequest {}

message AppendEntriesResponse {}